hphp/test/quick/ctor_param_promotion_redeclaration.php.expectf
HipHop Fatal error: Cannot redeclare A::$c in %s on line 8
